Early out selection update when data is not present https://bugs.webkit.org/show_bug.cgi?id=179084

Reviewed by Ryosuke Niwa.

We should early out of a selection update when we do not have the data that is necessary to make that
update. This mostly helps avoid debug asserts, but will be helpful with the selection changes that are
ongoing.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _updateChangedSelection:]):



Canonical link: https://commits.webkit.org/195293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224346 268f45cc-cd09-0410-ab3c-d52691b4dbfc